--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,16 +32,16 @@
                         menu
                     </button>
                     <ul class="nav__wrapper">
-                        <li class="nav__item"><a href="#">Home</a></li>
-                        <li class="nav__item"><a href="#">About</a></li>
-                        <li class="nav__item"><a href="#">Services</a></li>
-                        <li class="nav__item"><a href="#">Scrap Rate</a></li>
-                        <li class="nav__item"><a href="#">Contact</a></li>
+                        <li class="nav__item"><a routerLink="">Home</a></li>
+                        <li class="nav__item"><a routerLink="About">About</a></li>
+                        <li class="nav__item"><a routerLink="Services">Services</a></li>
+                        <li class="nav__item"><a routerLink="Scraprate">Scrap Rate</a></li>
+                        <li class="nav__item"><a routerLink="Contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="site-header__end">
-                <a href="#">Sign in</a>
+                <a routerLink="Signin">Sign in</a>
             </div>
         </div>
     </header>
