--- a/src/app/header/home/home.component.html
+++ b/src/app/header/home/home.component.html
@@ -1,1 +1,187 @@
-<p>home works!</p>
+<!-- first home section -->
+
+<div class="container">
+    <div class="row">
+        <!-- Left Part -->
+
+        <div class="col-lg-6 col-sm-12 local_home_leftSide  mt-5 pt-5">
+            <h1 class="local_home_title">Sell your recyclables
+                <br>online with
+                <span class="highlight">Eco-Trader!</span>
+            </h1>
+            <div class="local_home_sub_title">
+                <span class="local_home_pickup_items">Paper - Plastics - Metals - Appliances
+                </span>
+                <br>
+            </div>
+            <img src="../../../assets/image/35563608_2211.w048.n005.459A.p1.459.jpg" alt="assets"
+                style="max-height: 2000px; width: auto; margin-top: 15px; margin-left: 50px;">
+        </div>
+
+
+        <!-- Right part -->
+
+        <div class="col-lg-6 login-mobile-box" id="schedulePickup">
+            <div id="SchedulePickup" class="local_home_rightSide" style="height: 75vh;">
+                <div class="login_form_open">
+                    <div class="local_login_form">
+                        <div>
+                            <form>
+                                <h4 class="local_login_title">Schedule a Pickup</h4>
+                                <p class="local_mobile_text">Mobile</p>
+                                <div class="local_input_box ">
+                                    <span style="width: 2rem;">+91</span>
+                                    <input name="phoneNumber" type="tel" maxlength="10" class="sign_header_input "
+                                        id="phoneNumber" autocomplete="new-password" value="">
+                                </div>
+                                <p class="error_para"> </p>
+                                <input type="submit"
+                                    class="local_next_button md button button-solid ion-activatable ion-focusable">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- how it work -->
+
+<section class="how_works">
+    <div class="container text-center">
+        <h2 class="how_works_title">How it works</h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="how_works_col">
+                    <h4>Schedule a pickup</h4><img
+                        src="https://ik.imagekit.io/y8s2vhk66ef/undraw_Online_calendar_re_wk3t_1_SHrgqjm1w6l.png?updatedAt=1628624813421"
+                        alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="how_works_col">
+                    <h4>Pickup at your address</h4><img
+                        src="https://ik.imagekit.io/y8s2vhk66ef/undraw_Street_food_re_uwex_1_tHCc3auJgJY.png?updatedAt=1628624814853"
+                        alt="">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="how_works_col">
+                    <h4>Receive payment</h4><img
+                        src="https://ik.imagekit.io/y8s2vhk66ef/undraw_Credit_card_payments_re_qboh_1_Sop8u3hvUiX.png?updatedAt=1628624812461"
+                        alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- why us -->
+
+<section id="whyus" class="why_us">
+    <div class="container text-center">
+        <h2 class="header--why-us">Why us</h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-xl-3">
+                <div class="why_us_col"><img
+                        src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/rupee_h5cohN94jkyh.png"
+                        alt="Best Rates">
+                    <div>
+                        <h4>Best Rates</h4>
+                        <p>We provide the best value for your scrap from our network of Recyclers.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xl-3">
+                <div class="why_us_col"><img
+                        src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/thumbs-up_vOIp-YChzZhh.png"
+                        alt="Convenience">
+                    <div>
+                        <h4>Convenience</h4>
+                        <p>Doorstep pickup according to user's convenient date &amp; time.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xl-3">
+                <div class="why_us_col"><img
+                        src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/trust_TmQdK2fLBVD.png"
+                        alt="why_us_image">
+                    <div>
+                        <h4>Trust</h4>
+                        <p>Trained &amp; Verified Pickup Staff with Swapeco Smart Weighing Scale</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xl-3">
+                <div class="why_us_col"><img
+                        src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/eco_wwfqNtl3n-r.png" alt="why_us_image">
+                    <div>
+                        <h4>Eco-friendly</h4>
+                        <p>We ensure responsible recycling of your scrap items. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- section  -->
+
+<section class="deferent_section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <h2 class="deferent_title">Households &amp; Businesses have different needs and we cater to each
+                            of them</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row f-sm-column-reverse">
+            <div class="col-md-6">
+                <div class="content-holder">
+                    <p class="deferent_sub_title">For Households </p>
+                    <ul class="deferent_ul">
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>On-Demand Doorstep Pickups</span></li>
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>Accurate Digital Weighing</span></li>
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>Safety (Trained &amp; Verified Staff)</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 text-center"><img class="deferent_image"
+                    src="https://ik.imagekit.io/y8s2vhk66ef/home_illust_1_vqbxsy5za.png?updatedAt=1628667425589"
+                    alt="defent_image"></div>
+        </div>
+        <div class="row" style="margin-top: 50px;">
+            <div class="col-md-6 text-center"><img class="deferent_image_household"
+                    src="https://ik.imagekit.io/y8s2vhk66ef/business_illust1_1_UjVieCFRixz.png?updatedAt=1628667425278"
+                    alt="defent_image"></div>
+            <div class="col-md-6">
+                <div class="content-holder">
+                    <p class="deferent_sub_title">For Businesses </p>
+                    <ul class="deferent_ul">
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>Formal Payments &amp; Documentation</span></li>
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>Sustainability Reports</span></li>
+                        <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
+                                alt="assets"><span>Competitive Prices</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- footer -->
+
+<app-footer></app-footer>
