--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -37,7 +37,8 @@
             </div>
         </div>
     </div>
-    <div class="helper-action active"><button>+</button>
+    <!-- <div class="helper-action active">
+        <button>+</button>
         <ul>
             <li><a href="tel:+91111111111"><img
                         src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/assets/telephone-call_0Etr04ShlH.png?ik-sdk-version=javascript-1.4.3&amp;updatedAt=1675339109083"
@@ -46,5 +47,5 @@
                         src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/assets/whatsapp_VhssjIqsN5.png?ik-sdk-version=javascript-1.4.3&amp;updatedAt=1675339111494"></a>
             </li>
         </ul>
-    </div>
+    </div> -->
 </footer>
