--- a/src/app/header/about/about.component.html
+++ b/src/app/header/about/about.component.html
@@ -1,1 +1,208 @@
-<p>about works!</p>
+<main class="content pt-13" b-sflvd4qzb0=""><!--!-->
+    <div class="container">
+        <h3 class="m-2">
+            About Us
+        </h3>
+        <div class="pt-4 body-lg m-2">
+            The Eco - Trader is a technology-driven company working on SaaS (Software as a Service) based model to
+            organize the waste
+            management sector.
+            <br>
+            <div class="op-1">
+                We are likely to create more and more opportunities for the people who are willing to make their effort
+                in building a peaceful and pollution free environment.
+            </div>
+
+        </div>
+    </div>
+    <!--!-->
+    <div class="container">
+        <h4 class="pt-10 m-2 fg-default-2">
+            Founders Message
+        </h4>
+        <h5 class="pt-4 m-2 fg-success-1">
+            “Waste is never a waste, it’s rather an opportunity to something new”
+        </h5>
+        <div class="pt-6 row">
+            <div class="col">
+                <div class="body-lg">
+                    The unorganized sector made it a task for company to sell his own household scrap, it is then that
+                    he
+                    decided to infuse technology into the sector making it easy for thousands of consumers to sell scrap
+                    online.
+                </div><br>
+                <div class="body-lg">
+                    But, this wasn’t enough to mark a significant impact, on households So , the Eco-Trader start
+                    one-stop solution
+                    for customer.
+
+                    Eco-trader is introduced to address the problems that India is facing in the scrap industry. India
+                    generates an estimated 25 million tonnes of scrap annually, which is expected to double by 2025.
+                    However, the country lacks efficient scrap management practices, resulting in environmental and
+                    health hazards. Open burning of scrap releases harmful gases and particulate matter, causing health
+                    problems such as cancer and neurological disorders.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--!-->
+    <div class="container">
+        <h4 class="pt-10 m-2 fg-default-2">
+            Our Core Values
+        </h4>
+        <div class="pt-4 m-2 row d-flex justify-content-between">
+            <div class="me-lg-7 mt-4 p-8 col-lg-3 col-12 flex-grow-1 rounded-6 container-bg-2">
+                <h5 class="pt-6 px-4  fg-success-1">
+                    Vision
+                </h5>
+                <div class="px-4 body-lg">
+                    Our vision for Eco Trader is to create a user-friendly and transparent platform that connects buyers
+                    and sellers of scrap materials, facilitating efficient and sustainable transactions.
+                </div>
+            </div>
+            <div class="me-lg-7 mt-4 p-8 col-lg-3 col-12 flex-grow-1 rounded-6 container-bg-2">
+                <h5 class="pt-4 px-4 fg-success-1">
+                    Mission
+                </h5>
+                <div class="px-4 body-lg">
+                    Our mission is to revolutionize the scrap industry by creating a platform that connects the two
+                    parties and provides a sustainable solution for individuals and businesses to sell and purchase
+                    scrap material.
+                </div>
+            </div>
+            <div class="me-lg-4 mt-4 p-8 col-lg-3 col-12 flex-grow-1 rounded-6 container-bg-2">
+                <h5 class="pt-4 px-4 fg-success-1">
+                    Goal
+                </h5>
+                <div class="px-4 body-lg">
+                    Through continuous innovation of technology, our goal is to make recycling achievable and accessible
+                    to all, from institutions to individuals.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--!-->
+    <div class="container">
+        <h4 class="pt-10 m-2 fg-default-2">
+            Our Belief
+        </h4>
+        <div class="pt-4 m-2 body-lg">
+            We believe that India can be a greener and cleaner country, as every household commits to getting their dry
+            scrap recycled, not only resources can be saved from over-exploitation, but the landfills with mixed harmful
+            garbage can be eradicated.
+        </div>
+        <div class="pt-4 m-2 row position-relative">
+            <div class="mt-lg-12 p-lg-8 top-0 end-0 d-none d-lg-block mw-100 position-absolute text-end">
+                <img src="../../../assets/image/about-us-waste-dump.jpg" class="rounded-6  mw-100 h-auto w-auto"
+                    alt="About us">
+            </div>
+            <div class="pt-6 m-lg-2 p-lg-10 col-lg-8 col-12 rounded-6 container-bg-2">
+                <h5 class="fg-success-1  p-4 pt-lg-4">
+                    Minimizing landfills
+                </h5>
+                <div class="container-bg-2">
+                    <ul>
+                        <li class="pe-lg-14 me-lg-10 body-lg">
+                            Landfills are spreading across India at a fast pace making it more complex each day to
+                            manage the waste management value chain.
+                        </li>
+                        <li class="pt-4 pt-lg-8 pe-lg-14 me-lg-10 body-lg">
+                            But, this can be tackled only when we start waste management from our homes in the way of
+                            waste segregation. Waste segregation is the process of differentiating dry and wet waste and
+                            disposing of it into two different bins.
+                        </li>
+                        <li class="pt-4 pt-lg-8 pe-lg-14 me-lg-10 body-lg">
+                            We get the dry segregated waste recycled as you sell your scrap to us. If we inculcate the
+                            habits of “avoiding tossing trash anywhere” and “adopting daily waste segregation”, remember
+                            we’re coming one step ahead in reducing landfills.
+                        </li>
+                    </ul>
+                </div>
+
+                <h5 class="fg-success-1 pt-8">
+                    Maximizing Recycling
+                </h5>
+                
+                <div class="container-bg-2">
+                    <ul>
+                        
+                        <li class="pt-4 pe-lg-14 me-lg-10 body-lg">
+                            To mark a larger impact, along with serving households, The Eco-Trader is a recycling
+                            partner to small to big businesses and corporates to institutions with the aim to build a
+                            conscious ecosystem on a societal level.
+                        </li>
+                        <li class="pt-4 pe-lg-14 me-lg-10 body-lg">
+                            EcoTrader helps to ensure that more scrap is diverted from landfills and put back into the
+                            recycling stream. This promotes a more sustainable approach to waste management and helps to
+                            reduce the environmental impact of scrap generation.
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--!-->
+    <div class="container">
+        <h4 class="pt-10 fg-default-2">
+            The Eco-Trader brings you
+        </h4>
+        <div class="pt-4 m-2 row">
+            <div class="col-sm-4">
+                <div class="pt-8 pb-6"><img src="../../../assets/image/1.jpg" class="mw-100 h-auto w-auto"
+                        alt="About us">
+                </div>
+                <h6 class="pb-2 pt-7 fg-success-1">
+                    Transparency
+                </h6>
+                <div class="body-lg">
+                    Our App enables users to access the impact marked through the waste sold and recycled in terms of
+                    resources and energy saved.
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="pt-8 pb-6"><img src="../../../assets/image/2.jpg" class="mw-100 h-auto w-auto"
+                        alt="About us">
+                </div>
+                <h6 class="pb-2 pt-7 fg-success-1">
+                    Traceability
+                </h6>
+                <div class="body-lg">
+                    By providing robust traceability, EcoTrader can increase trust and confidence in the scrap industry,
+                    and encourage more sustainable and ethical practices.
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="pt-8 pb-6"><img src="../../../assets/image/3.jpg" class="mw-100 h-auto w-auto"
+                        alt="About us">
+                </div>
+                <h6 class="pt-7 pb-2 fg-success-1">
+                    Scalability
+                </h6>
+                <div class="pb-10 body-lg">
+                    Scalability is a critical factor in ensuring that EcoTrader remains a reliable and effective
+                    solution for the scrap industry, both now and in the future.
+                </div>
+            </div>
+        </div>
+    </div>
+    &nbsp;
+    <!--!-->
+    <div class="container">
+        <div class="row m-2 container-bg-success-1 rounded-6">
+            <div class="p-9 col flex-grow-1">
+                <h4 class="fg-inverse-1 k1">
+                    The Way Forward
+                </h4>
+                <div class="p-4 pt-2 fg-inverse-1 body-lg">
+                    We look forward to creating an ecosystem within the social system that of conscious waste disposal
+                    behavior, increased awareness that promotes waste segregation at source, and enthusiasm towards
+                    recycling as one of the effective waste solutions in India.
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<div class="pt-10">
+    <app-footer></app-footer>
+</div>
