--- a/src/app/header/services/services.component.html
+++ b/src/app/header/services/services.component.html
@@ -1,1 +1,81 @@
-<p>services works!</p>
+<div class="col-lg-6 col-12 ps-lg-12" >
+    <h2 class="mt-lg-10" >Sell your scrap in just few clicks!</h2>
+    <!--!-->
+    <div class="body-lg mt-lg-7 mt-4" >
+        In this evolving technological world, let your kabaad find a Eco-Trader, ONLINE!
+    </div>
+    <div class="mt-lg-7 mt-8 text-center text-lg-start mb-10 mb-lg-0">
+        <button type="button" class="btn-primary btn-lg app-download-modal-btn"><a routerLink="../Scraprate">Sell Scrap</a></button>
+    </div>
+
+    
+
+</div>
+
+<!-- Card -->
+
+<div class="container-fluid  light-theme">
+
+    <h3 class="pt-12 pt-lg-13 pb-lg-11 text-lg-center fg-inverse-1" >
+        3 <span class="fg-success-2">easy steps</span> to sell your Scrap
+    </h3>
+
+
+    <div class="container cardbody">
+        <div class="row mt-n1-9">
+            <div class="col-md-6 col-xl-4 mt-1-9 wow fadeInUp" data-wow-delay=".2s"
+                style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                <div class="team-style07">
+                    <div class="team-thumb mb-1-9">
+                        <div class="thumb">
+                            <video autoplay="" loop="" muted="" poster="images/individual/choose-material.webp"
+                                class="mw-100" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/calender.mp4" type="video/m4v" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/calender.m4v" type="video/mp4" b-c9s2b9qmjt="">
+                            </video>
+                        </div>
+
+                    </div>
+                    <h3 class="h5 mb-1">Schedule Pickup</h3>
+                    <p class="mb-0">Select your preferred date and add the scrap pick-up location.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4 mt-1-9 wow fadeInUp" data-wow-delay=".3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                <div class="team-style07">
+                    <div class="team-thumb mb-1-9">
+                        <div class="thumb">
+                            <video autoplay="" loop="" muted="" poster="images/individual/choose-material.webp"
+                                class="mw-100" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/check.m4v" type="video/m4v" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/check.mp4" type="video/mp4" b-c9s2b9qmjt="">
+                            </video>
+                        </div>
+
+                    </div>
+                    <h3 class="h5 mb-1">Pickup at your address</h3>
+                    <p class="mb-0">The Scrap collector will arrive at your location, load your scrap materials.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4 mt-1-9 wow fadeInUp" data-wow-delay=".4s"
+                style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                <div class="team-style07">
+                    <div class="team-thumb mb-1-9">
+                        <div class="thumb">
+                            <video autoplay="" loop="" muted="" poster="images/individual/choose-material.webp"
+                                class="mw-100" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/billing.mp4" type="video/m4v" b-c9s2b9qmjt="">
+                                <source src="../../../assets/image/billing.m4v" type="video/mp4" b-c9s2b9qmjt="">
+                            </video>
+                        </div>
+
+                    </div>
+                    <h3 class="h5 mb-1">Recieve Payment</h3>
+                    <p class="mb-0">Recieve payment in any one of the payment modes via cash or UPI.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<app-footer></app-footer>
