--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
     <header class="site-header">
         <div class="wrapper site-header__wrapper">
             <div class="site-header__start">
-                <a href="#" class="brand">Eco - Trader</a>
+                <a href="#" class="brand"> <img src="../../assets/image/Organic Food Logo (1).png" alt="assets"></a>
             </div>
             <div class="site-header__middle">
                 <nav class="nav">
